--- a/upi_payment/pubspec.yaml
+++ b/upi_payment/pubspec.yaml
@@ -33,6 +33,12 @@ dependencies:
   qr_flutter: ^4.1.0
   qr_code_scanner: ^1.0.1
   url_launcher: ^6.2.2
+  firebase_core: ^2.24.2
+  firebase_auth: ^4.15.3
+  cloud_firestore:
+  pinput: 
+  google_sign_in: 
+  
 
 
   # The following adds the Cupertino Icons font to your application.
